--- a/site/dashboard/css/main.css
+++ b/site/dashboard/css/main.css
@@ -23,6 +23,27 @@ html { visibility:hidden; }
 .unauthenticated {
    display:none;
 }
+
+.tab-pane:not(.active) {
+   display: none;
+}
+
+.grd-block {
+   padding: 20px;
+   border-radius: 10px;
+   box-shadow: -5px -5px 16px 1px #ffffff, 5px 5px 16px 0 rgba(188, 191, 205, 0.5);
+   
+}
+
+#breadcrumb ol li{
+   float: right;
+}
+
+.center {
+   margin: auto;
+   width: 50%;
+   padding: 10px;
+ }
 /*
 body {
    -moz-transform: scale(1.3);
